# LatentSync-Fix

./: PROJECT_ORGANIZATION.md  data_processing_pipeline.sh  infer_dir.sh  pyproject.toml
docs/: DTYPE_FIXES_AND_IMPROVEMENTS.md  README.md  SMOOTHING_IMPROVEMENTS.md  enhanced_affine_integration.md
latentsync/pipelines/: lipsync_pipeline.py
latentsync/utils/: affine_transform.py.backup  filters.py  image_processor.py  image_processor.py.backup  util.py
preprocess/: affine_transform.py
tests/: README.md  fix_dtype_issues.py  test_affine_matrix_shape_fix.py  test_affine_matrix_shapes.py  test_device_compatibility.py  test_final_inference_fix.py  test_inference_fix.py  test_inference_scenario.py  test_lipsync_enhanced_affine.py  test_lipsync_pipeline_integration.py  test_smoothing_improvements.py
